gitops/components/data-platform/mongodb/initialize/workload.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: mongodb-initialize-egress, namespace: data-platform-dev}
spec:
  podSelector: {matchLabels: {app.kubernetes.io/name: mongodb-initialize}}
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector: {matchLabels: {app.kubernetes.io/name: mongodb}}
      ports: [{protocol: TCP, port: 27017}]
